// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.3.0_xpack_sample_saved_objects.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "config": 1,
    "sample-data-telemetry": 3,
    "space": 1,
    "telemetry": 1,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "canvas-workpad": 3,
    "dashboard": 3,
    "index-pattern": 3,
    "map": 3,
    "search": 2,
    "visualization": 39,
  },
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 2,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.3.0_xpack_sample_saved_objects.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "canvas-workpad": 3,
    "config": 1,
    "dashboard": 3,
    "index-pattern": 3,
    "map": 3,
    "maps-telemetry": 1,
    "sample-data-telemetry": 3,
    "search": 2,
    "space": 1,
    "telemetry": 1,
    "visualization": 39,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 2,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.7.2_xpack_100k_obj.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "config": 1,
    "space": 1,
    "ui-metric": 5,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "dashboard": 52994,
    "index-pattern": 1,
    "search": 1,
    "visualization": 53004,
  },
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 5,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.7.2_xpack_100k_obj.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_transactional": 4,
    "config": 1,
    "dashboard": 52994,
    "index-pattern": 1,
    "maps-telemetry": 1,
    "search": 1,
    "space": 1,
    "ui-metric": 5,
    "visualization": 53004,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 5,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13.0_concurrent_5k_foo.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {},
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {},
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {},
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13.0_concurrent_5k_foo.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "foo": 5000,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": undefined,
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13.0_with_unknown_so.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "config": 1,
    "space": 7,
    "ui-metric": 6,
    "usage-counters": 14,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "index-pattern": 2,
  },
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 11,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13.0_with_unknown_so.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "config": 1,
    "foo": 7,
    "index-pattern": 2,
    "space": 7,
    "ui-metric": 6,
    "usage-counters": 14,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 11,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13.2_so_with_multiple_namespaces.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {},
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {},
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {},
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13.2_so_with_multiple_namespaces.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "bar": 2,
    "foo": 2,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": undefined,
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13_1.5k_failed_action_tasks.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_daily": 2,
    "config": 1,
    "core-usage-stats": 1,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
    "ui-metric": 1,
  },
  ".kibana_alerting_cases": Object {
    "action": 1,
    "action_task_params": 893,
    "alert": 1,
    "api_key_pending_invalidation": 2,
  },
  ".kibana_analytics": Object {
    "canvas-workpad-template": 5,
  },
  ".kibana_ingest": Object {
    "ingest_manager_settings": 1,
  },
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 954,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.13_1.5k_failed_action_tasks.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "action": 1,
    "action_task_params": 2010,
    "alert": 1,
    "api_key_pending_invalidation": 2,
    "apm-telemetry": 1,
    "application_usage_daily": 2,
    "canvas-workpad-template": 5,
    "config": 1,
    "core-usage-stats": 1,
    "ingest_manager_settings": 1,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
    "ui-metric": 1,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 2020,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.14.0_xpack_sample_saved_objects.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_daily": 4,
    "config": 1,
    "core-usage-stats": 1,
    "event_loop_delays_daily": 1,
    "sample-data-telemetry": 3,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
    "ui-metric": 5,
    "usage-counters": 4,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "canvas-workpad": 3,
    "canvas-workpad-template": 5,
    "dashboard": 19,
    "graph-workspace": 3,
    "index-pattern": 5,
    "map": 3,
    "search": 14,
    "visualization": 173,
  },
  ".kibana_ingest": Object {
    "epm-packages": 3,
    "epm-packages-assets": 293,
    "ingest-agent-policies": 2,
    "ingest-outputs": 1,
    "ingest-package-policies": 2,
    "ingest_manager_settings": 1,
  },
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 14,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7.14.0_xpack_sample_saved_objects.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_daily": 4,
    "canvas-workpad": 3,
    "canvas-workpad-template": 5,
    "config": 1,
    "core-usage-stats": 1,
    "dashboard": 19,
    "epm-packages": 3,
    "epm-packages-assets": 293,
    "event_loop_delays_daily": 1,
    "graph-workspace": 3,
    "index-pattern": 5,
    "ingest-agent-policies": 2,
    "ingest-outputs": 1,
    "ingest-package-policies": 2,
    "ingest_manager_settings": 1,
    "map": 3,
    "osquery-usage-metric": 1,
    "sample-data-telemetry": 3,
    "search": 14,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
    "ui-metric": 5,
    "usage-counters": 4,
    "visualization": 173,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 14,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7_13_corrupt_and_transform_failures_docs.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "config": 1,
    "space": 7,
    "ui-metric": 6,
    "usage-counters": 14,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "index-pattern": 2,
  },
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 11,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 7_13_corrupt_and_transform_failures_docs.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "config": 1,
    "foo": 7,
    "index-pattern": 2,
    "space": 7,
    "ui-metric": 6,
    "usage-counters": 14,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 11,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.0.0_document_migration_failure.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "config": 1,
    "core-usage-stats": 1,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "canvas-workpad-template": 5,
  },
  ".kibana_ingest": Object {
    "ingest_manager_settings": 1,
  },
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 12,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.0.0_document_migration_failure.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "canvas-workpad-template": 5,
    "config": 1,
    "core-usage-stats": 1,
    "foo": 4,
    "ingest_manager_settings": 1,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 12,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.0.0_migrated_with_outdated_docs.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {},
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {},
  ".kibana_ingest": Object {},
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {},
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.0.0_migrated_with_outdated_docs.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "foo": 1,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": undefined,
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.0.0_v1_migrations_sample_data_saved_objects.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_daily": 2,
    "config": 1,
    "core-usage-stats": 1,
    "sample-data-telemetry": 1,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
    "ui-metric": 1,
  },
  ".kibana_alerting_cases": Object {},
  ".kibana_analytics": Object {
    "canvas-workpad": 1,
    "canvas-workpad-template": 5,
    "dashboard": 1,
    "graph-workspace": 1,
    "index-pattern": 1,
    "map": 1,
    "search": 1,
    "search-telemetry": 1,
    "visualization": 17,
  },
  ".kibana_ingest": Object {
    "ingest_manager_settings": 1,
  },
  ".kibana_security_solution": Object {},
  ".kibana_task_manager": Object {
    "task": 12,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.0.0_v1_migrations_sample_data_saved_objects.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "application_usage_daily": 2,
    "canvas-workpad": 1,
    "canvas-workpad-template": 5,
    "config": 1,
    "core-usage-stats": 1,
    "dashboard": 1,
    "graph-workspace": 1,
    "index-pattern": 1,
    "ingest_manager_settings": 1,
    "map": 1,
    "sample-data-telemetry": 1,
    "search": 1,
    "search-telemetry": 1,
    "space": 1,
    "spaces-usage-stats": 1,
    "telemetry": 1,
    "ui-metric": 1,
    "visualization": 17,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 12,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.4.0_with_sample_data_logs.zip archive: after migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "config": 1,
    "core-usage-stats": 1,
    "event_loop_delays_daily": 1,
    "ml-trained-model": 1,
    "sample-data-telemetry": 1,
    "space": 1,
    "usage-counters": 9,
  },
  ".kibana_alerting_cases": Object {
    "cases-telemetry": 1,
  },
  ".kibana_analytics": Object {
    "canvas-workpad": 1,
    "canvas-workpad-template": 5,
    "dashboard": 1,
    "graph-workspace": 1,
    "index-pattern": 1,
    "lens": 1,
    "map": 1,
    "search": 1,
    "visualization": 6,
  },
  ".kibana_ingest": Object {
    "epm-packages": 1,
    "epm-packages-assets": 100,
    "ingest-download-sources": 1,
    "ingest-outputs": 1,
    "ingest_manager_settings": 1,
  },
  ".kibana_security_solution": Object {
    "exception-list-agnostic": 3,
  },
  ".kibana_task_manager": Object {
    "task": 25,
  },
}
`;

exports[`split .kibana index into multiple system indices when multiple Kibana migrators run in parallel correctly migrates 8.4.0_with_sample_data_logs.zip archive: before migration 1`] = `
Object {
  ".kibana": Object {
    "apm-telemetry": 1,
    "canvas-workpad": 1,
    "canvas-workpad-template": 5,
    "cases-telemetry": 1,
    "config": 1,
    "core-usage-stats": 1,
    "dashboard": 1,
    "epm-packages": 1,
    "epm-packages-assets": 100,
    "event_loop_delays_daily": 1,
    "exception-list-agnostic": 3,
    "graph-workspace": 1,
    "index-pattern": 1,
    "ingest-download-sources": 1,
    "ingest-outputs": 1,
    "ingest_manager_settings": 1,
    "lens": 1,
    "map": 1,
    "ml-trained-model": 1,
    "sample-data-telemetry": 1,
    "search": 1,
    "space": 1,
    "usage-counters": 9,
    "visualization": 6,
  },
  ".kibana_alerting_cases": undefined,
  ".kibana_analytics": undefined,
  ".kibana_ingest": undefined,
  ".kibana_security_solution": undefined,
  ".kibana_task_manager": Object {
    "task": 25,
  },
}
`;
